--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <body>
     <header>
         <h1>Ciencia Compartida</h1>
-        <p>Página de estudio científico con fines educativos para compartir en la comunidad sin fines de lucro</p>
+        <p>Un espacio dedicado al estudio científico y la educación, creado para compartir conocimiento de manera gratuita y colaborativa en la comunidad</p>
     </header>
 
     <section>
