--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="es">
 <head>
     <meta charset="UTF-8">
@@ -6,24 +6,48 @@
     <title>Ciencia Compartida</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Arial', sans-serif;
             line-height: 1.6;
             background-color: #f4f4f4;
             margin: 0;
             padding: 0;
+            color: #333;
         }
         header {
-            background: #333;
-            color: #fff;
-            padding: 10px 0;
+            background: #2c3e50;
+            color: #ecf0f1;
+            padding: 20px 0;
             text-align: center;
+            position: relative;
+        }
+        header img {
+            position: absolute;
+            top: 10px;
+            left: 20px;
+            width: 50px;
+            height: 50px;
+        }
+        header h1 {
+            font-size: 2.5em;
+            margin: 0;
+        }
+        header p {
+            font-size: 1.2em;
+            margin-top: 10px;
         }
         section {
             margin: 20px;
+            padding: 20px;
+            background-color: #ffffff;
+            border-radius: 8px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+        section h2 {
+            color: #2980b9;
         }
         footer {
-            background: #333;
-            color: #fff;
+            background: #2c3e50;
+            color: #ecf0f1;
             text-align: center;
             padding: 10px 0;
             position: fixed;
@@ -34,6 +58,7 @@
 </head>
 <body>
     <header>
+        <img src="https://upload.wikimedia.org/wikipedia/commons/4/45/New_Logo_GitHub_Logo.svg" alt="Logo de Ciencia Compartida">
         <h1>Ciencia Compartida</h1>
         <p>Un espacio dedicado al estudio científico y la educación, creado para compartir conocimiento de manera gratuita y colaborativa en la comunidad</p>
     </header>
@@ -66,3 +91,4 @@
     </footer>
 </body>
 </html>
+
